--- a/css/style.css
+++ b/css/style.css
@@ -1125,9 +1125,9 @@ opacity: 1;
   transform: rotate(-45deg);
 }
 
-  /* .popup {
+   .popup {
   display: none;
-} */
+}
 
 /*-----------форма обратной связи конец-------*/
 .social-connection {
