--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
 } */
- /* body>*>*>* {
+  body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
 }
 
@@ -35,9 +35,10 @@ body>*>*>*>*>* {
 body>*>*>*>*>*>* {
   background: rgba(150, 110, 110, 0.3);
 }
+
 a {
   text-decoration: none;
-} */
+}
 
 img {
   max-width: 100%;
@@ -64,7 +65,7 @@ img {
 .main-header,
 .features,
 .head-name {
-  background-color: #eeeeee;
+  /* background-color: #eeeeee; */
 }
 
 /*вернуть фон после завершения разметки макросетки*/
@@ -79,11 +80,6 @@ img {
   display: flex;
   flex-wrap: wrap;
   line-height: 30px;
-}
-
-.main-header-logo {
-  width: 170px;
-  height: 75px;
 }
 
 .main-header-logo:hover,
@@ -105,12 +101,16 @@ img {
 .site-navigation {
   display: flex;
   width: 440px;
-  margin-left: 202px;
+  margin-left: 200px;
   margin-top: 25px;
 }
 
 .site-navigation li {
   margin-left: 50px;
+}
+
+.site-navigation li:first-child {
+  margin-left: 0;
 }
 
 /*стили для подчеркивания активного пунка меню. Не рабоатет*/
