--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,8 @@ img {
   display: flex;
   flex-wrap: wrap;
   line-height: 30px;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 .main-header-logo:hover,
