--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,7 @@ img {
 .main-header,
 .features,
 .head-name {
-  /* background-color: #eeeeee; */
+  background-color: #eeeeee;
 }
 
 /*вернуть фон после завершения разметки макросетки*/
