поправил свойства кнопке "Показать"

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 body>*>* {
   background: rgba(225, 235, 223, 0.3);
 } */
-  body>*>*>* {
+  /* body>*>*>* {
   background: rgba(44, 176, 21, 0.3);
 }
 
@@ -34,7 +34,7 @@ body>*>*>*>*>* {
 
 body>*>*>*>*>*>* {
   background: rgba(150, 110, 110, 0.3);
-}
+} */
 
 a {
   text-decoration: none;
@@ -319,11 +319,8 @@ img {
 }
 
 .order-button {
-  /* display: inline-block; */
-  width: 160px;
-  /* padding-left: 40px;
-  padding-right: 40px; */
-}
+    width: 160px;
+  }
 
 .order-button-color1 {
   background-color: #00ca74;
@@ -770,9 +767,8 @@ opacity: 1;
   color: #000000;
   background-color: #eeeeee;
   width: 260px;
-  padding-top: 16px;
-  padding-bottom: 16px;
-}
+  border: 3px solid transparent;
+  }
 
 .filter-button:hover,
 .filter-button:focus {
@@ -781,8 +777,8 @@ opacity: 1;
 }
 
 .filter-button:active {
-  opacity: 0.3;
-  color: #959595;
+  background-color: #d5d5d5;
+  color: #a9a9a9;
   box-shadow: inset 0 3px 0 0 #bfbfbf;
 }
 
