--- a/css/style.css
+++ b/css/style.css
@@ -548,14 +548,14 @@ img {
   border: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 44px;
+  margin-bottom: 47px;
 }
 
 .filter legend {
   font-size: 18px;
   font-weight: 700;
   line-height: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 17px;
   text-transform: uppercase;
 }
 
@@ -571,6 +571,12 @@ img {
   margin-bottom: 20px;
   padding-left: 36px;
 }
+
+.filter-option-rubber,
+.filter-option-basket {
+  margin-bottom: 0;
+}
+
 
 .label-radio,
 .checkbox-label {
@@ -596,14 +602,14 @@ img {
 }
 
 .filter-input-radio:checked+.label-radio-checked::before {
-  content: "";
+  /* content: "";
   position: absolute;
   width: 25px;
-  height: 25px;
+  height: 25px; */
   background: radial-gradient(#4d4d4d 4px, #ffffff 4px, #ffffff 9px, #4d4d4d 9px, #4d4d4d 13px);
-  left: -35px;
+  /* left: -35px;
   top: -4px;
-  opacity: 0.4;
+  opacity: 0.4; */
 }
 
 .filter-input-radio:checked+.label-radio-checked:hover::before {
@@ -633,16 +639,16 @@ img {
 }
 
 .filter-input-checkbox:checked+.checkbox-label-checked::after {
-  content: "";
+  /* content: "";
   position: absolute;
   width: 27px;
   height: 27px;
   left: -34px;
-  top: -4px;
+  top: -4px; */
   background-image: url(../img/icons/icon-filter/icon-checkbox-on.svg);
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-position: 0 0;
-  opacity: 0.4;
+  opacity: 0.4; */
 }
 
 .filter-input-checkbox:checked+.checkbox-label-checked:hover::after {
