--- a/css/style.css
+++ b/css/style.css
@@ -642,13 +642,39 @@ img {
 .filter-input-checkbox:focus+.label-checkbox::before {
   opacity: 1;
 }
+/*cвойства для образца*/
+/*
+.button {
+  display: block;
+  font-weight: 500;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  background-color: #fb565a;
+  border-radius: 3px;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #e74246;
+}
+
+.button:active {
+  box-shadow: inset 0 3px 0 0 #c13135;
+  background-color: #d7373b;
+  color: #e48789;
+}
+*/
 
 .filter-button {
   color: #000000;
   background-color: #eeeeee;
   width: 260px;
   border: 3px solid transparent;
-}
+  }
 
 .filter-button:hover,
 .filter-button:focus {
