--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,7 @@ img {
 .filter-item legend {
   font-size: 18px;
   line-height: 24px;
+  /* letter-spacing: 0,001em; */
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -620,6 +621,7 @@ img {
   width: 50%;
   font-size: 16px;
   text-transform: uppercase;
+  vertical-align: baseline;
 }
 
 .price-controls input {
