--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,6 @@ img {
 
 /*стили для подчеркивания активного пунка меню.*/
 .menu-item-current {
-  display: block;
   position: relative;
 }
 
@@ -125,6 +124,7 @@ img {
   position: absolute;
   background-color: #fb565a;
   left: 0;
+  top: 30px;
   width: 100%;
   height: 3px;
 }
